# GeminiAI

./: 1. Gemini Fundamentals.ipynb  2. Text Generation.ipynb  3. Multimodal.ipynb  4. Deployment.ipynb  5. E2E Solutions.ipynb  README.md  pyproject.toml
data/: pipeline_results.json
