[project]
name = "geminiai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-cloud-aiplatform>=1.71.1",
    "google-genai>=1.68.0",
    "google-generativeai>=0.8.6",
    "jupyter>=1.1.1",
    "kfp>=2.13.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "vertexai>=1.71.1",
    "watermark>=2.6.0",
]
